chore: 兼容旧版本，不使用 Stream.toList() 方法